--- a/groupChat/index.html
+++ b/groupChat/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>group_chat</title>
   </head>
   <body>
@@ -50,7 +50,6 @@
           alert('该浏览器不支持webSocket，请使用主流浏览器，如chrome')
         }
       }
-
 
       openBtn.addEventListener('click',function(){
         console.log('打开连接')
